// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Logo renders correctly with props 1`] = `
<div>
  <h1
    class="isFullscreen"
    css="[object Object]"
  >
    <a
      href="/"
    >
      EYESBOUND
    </a>
  </h1>
</div>
`;

exports[`Logo renders correctly without props 1`] = `
<div>
  <h1
    class=""
    css="[object Object]"
  >
    <a
      href="/"
    >
      EYESBOUND
    </a>
  </h1>
</div>
`;
